examples/testing/negative_costs-lower_bounds/nested_loop_with_minimum.ces
% ENTRIES
%
entry(nested_loop(Max):[]).

eq(nested_loop(Max),0,[while_0(0,0,Max)],[Max>=0]).

eq(while_0(K,I,Max),0,[],[I>Max,K=Max]).
eq(while_0(K,I,Max),1,[while_1(K,Max,Kout),while_0(Kout,I+1,Max)],[I=<Max]).

eq(while_1(K,NMax,Kout),0,[],[K=Kout]).
eq(while_1(K,NMax,Kout),2,[while_1(K+1,NMax,Kout)],[K+1=<NMax]).

